--- a/index.html
+++ b/index.html
@@ -5,13 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>play sudoku </title>
 </head>
 
 <body>
-    <header>
-        <div class="title">Sudoku </div>
+    <header id="header">
+        <div class="logo"></div>
     </header>
+
+    <div id="container">
+        <div id="main"></div>
+        <div id="sidebarL">
+                <ul>
+                        <li><a href="index.html" class="button">Easy</a></li>
+                        <li><a href="#" class="button">Medium</a></li>
+                        <li><a href="#" class="button">Advanced</a></li>
+                    <li><a href="howto.html" class="button">How to play </a></li>
+                </ul>
+        </div>
+        <div id="sidebarR"></div>
+    </div>
+
+
+
+    <footer>
+        <a href="#" target="_blank" class="fa fa-twitter" style="font-size:24px;">
+            
+        </a>
+        <a href="#" target="_blank">
+          
+        </a>
+        <div>Copyright by Masarah </div>
+    </footer>
 
 
 </body>
