--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="title">Sudoku </div>
+        <div class="logo"></div>
     </header>
     <ul>
             <li><a href="index.html" class="button">Start</a></li>
