--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     </header>
 
     <div id="container">
-        <div id="main"></div>
-        <div id="sidebarL">
-                <ul>
+            <div id="sidebarL">
+                    <ul>
                         <li><a href="index.html" class="button">Easy</a></li>
                         <li><a href="#" class="button">Medium</a></li>
                         <li><a href="#" class="button">Advanced</a></li>
-                    <li><a href="howto.html" class="button">How to play </a></li>
-                </ul>
+                        <li><a href="howto.html" class="button">How to play </a></li>
+                    </ul>
+                </div>
+        <div id="main">
+
         </div>
+
         <div id="sidebarR"></div>
     </div>
 
@@ -33,10 +36,10 @@
 
     <footer>
         <a href="#" target="_blank" class="fa fa-twitter" style="font-size:24px;">
-            
+
         </a>
         <a href="#" target="_blank">
-          
+
         </a>
         <div>Copyright by Masarah </div>
     </footer>
