--- a/index.html
+++ b/index.html
@@ -17,16 +17,285 @@
     </header>
 
     <div id="container">
-            <div id="sidebarL">
-                    <ul>
-                        <li><a href="index.html" class="button">Easy</a></li>
-                        <li><a href="#" class="button">Medium</a></li>
-                        <li><a href="#" class="button">Advanced</a></li>
-                        <li><a href="howto.html" class="button">How to play </a></li>
-                    </ul>
-                </div>
+        <div id="sidebarL">
+            <ul>
+                <li><a href="index.html" class="button">Easy</a></li>
+                <li><a href="#" class="button">Medium</a></li>
+                <li><a href="#" class="button">Advanced</a></li>
+                <li><a href="howto.html" class="button">How to play </a></li>
+            </ul>
+        </div>
         <div id="main">
-
+            <table>
+                <thead>
+                    <tr>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                        <td>
+                            <input type="text" size="1" name="sud[]"></input>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
 
         <div id="sidebarR"></div>
