--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+
     <title>sudoku</title>
 </head>
 
@@ -13,11 +19,18 @@
     <header>
         <div class="logo"></div>
     </header>
+<div class="land">
+    <input type="text" class="plInput">
+    <button class="submit">Train your brain</button>
+    <div class="inf"></div>
+    
     <ul>
             <li><a href="index.html" class="button">Start</a></li>
         <li><a href="howto.html" class="button">How to play </a></li>
         <li><a href="aboutme.html" class="button">About me</a></li>
     </ul>
+</div>
+  
 </body>
-
+<script src="main.js"></script>
 </html>
