--- a/howto.html
+++ b/howto.html
@@ -12,6 +12,17 @@
         <header>
                 <div class="logo"></div>
             </header>
-            
+
+            <div class="how2" id="main">
+<p>  he enormous popularity of sudoku across the world is due to a couple of simple facts: 
+<ul>
+    <li class="how2" > Sudoku rules are easy to learn.</li>
+    <li class="how2" > Sudoku puzzles vary in difficulty from simple to devious.</li>
+    <li class="how2" > Puzzles have a unique solution that can be arrived at using pure logic. No guessing is required.</li>
+    <li class="how2" > Sudoku is not a math game, but is rather about identifying logical patterns.</li>
+    <li class="how2" > Complex strategies must be utilized in order to solve the hardest puzzles.</li>
+</ul>
+    </p>
+            </div>
 </body>
 </html>
