--- a/howto.html
+++ b/howto.html
@@ -21,6 +21,8 @@
     <li class="how2" > Puzzles have a unique solution that can be arrived at using pure logic. No guessing is required.</li>
     <li class="how2" > Sudoku is not a math game, but is rather about identifying logical patterns.</li>
     <li class="how2" > Complex strategies must be utilized in order to solve the hardest puzzles.</li>
+
+    <li class="how2" > <img src="images/howto.png"> </li>
 </ul>
     </p>
             </div>
